--- a/templates/userauth/login.html
+++ b/templates/userauth/login.html
@@ -49,6 +49,8 @@
 
                     <input type="submit" value="Login" class="btn  btn-primary submit-btn">
 
+                    <p class="text-sm "> Register your account here <a href="{% url 'register' %}"> Register</a></p>
+
                 </form>
 
             </div>
