--- a/templates/invoice/product.html
+++ b/templates/invoice/product.html
@@ -8,26 +8,17 @@
     
     <div class="row">
         
-        {% comment %} <div class="col-md-10">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="">Products</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Products</li>
-                </ol>
-              </nav>
-        </div> {% endcomment %}
+       
     
         <div class="col-md-2">
-            <a href="#" class="btn btn-primary">Add product</a>
+            <h2>All products </h2>
         </div>
  
         <div class="container">
             <div class="row">
                 <div class="col-md-8"></div>
                 <div class="col-md-4">
-                    {% comment %} <div class="form-group">
-                        <input type="text" class="form-control" id="searchField" placeholder="Search">
-                    </div> {% endcomment %}
+                   
                 </div>
                 
             </div>
@@ -38,29 +29,27 @@
                 <table class="table table-stripped table-hover">
                     <thead>
                         <tr>
-                            <th>Category</th>
-                            <th>Name</th>
-                            <th>Amount</th>
-                            <th>Qauntity</th>
+                            <th>Title </th>
+                            <th>Quantity</th>
+                            <th>Prince</th>
                             <th>Date</th>
-    
+                            <th>Invoice</th>
+                            
                         </tr>
                         
                     </thead>
                     <tbody>
                         
                         <tr>
-                            {% comment %} <td>{{product.category}}</td>
-                            <td>{{product.name}}</td>
-                            <td>k {{product.amount}}</td>
-                            <td>{{product.qauntity}}</td>
-                            <td>{{product.date}}</td>
-    
-                            <td>
-                                <a href="{% url 'product_edit' product.id %}"
-                                 class="btn btn-secondary btn-sm">
-                                 Edit</a>
-                                </td> {% endcomment %}
+                            {% for product in products %}
+                          <tr>
+                        <td>{{product.title}}</td>
+                       <td>{{product.quantity}}</td>
+                    <td>{{product.currency}} {{products.price}}</td>
+                    <td>{{product.order_date}}</td>
+          <td>{{product.invoice.number}}</td>
+        </tr>
+          {% endfor %}
                         </tr>
                         
                     </tbody>
