--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -12,32 +12,14 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="{% url 'products'  %}">
             <span data-feather="shopping-cart" class="align-text-bottom"></span>
             Products
           </a>
         </li>
         
       <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-        <span>Summary</span>
-        <a class="link-secondary" href="#" aria-label="Add a new report">
-          <span data-feather="plus-circle" class="align-text-bottom"></span>
-        </a>
-      </h6>
-      <ul class="nav flex-column mb-2">
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <span data-feather="file-text" class="align-text-bottom"></span>
-            Products summary
-          </a> 
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <span data-feather="file-text" class="align-text-bottom"></span>
-            Invoice summary
-          </a>
-        </li>
-        
+       
       </ul>
     </div>
   </nav>
