--- a/templates/userauth/registration.html
+++ b/templates/userauth/registration.html
@@ -41,36 +41,18 @@
 
                   <p class="text-sm text-success usernameSuccessOutput"></p>
 
-                  <div class="form-group p-2">
-                    <input 
-                    type="text" 
-                    name="Firstname" 
-                    placeholder="Firstname"
-                    id="firstnameField" 
+                   
                     
-                    class="form-control form-control-sm "/>
-                </div>
-              <div class="invalid-feedback invalid-feedback" style="display:none">
+                    
+              
 
-                <p class="text-sm text-success firstnameSuccessOutput"></p>
+             
+                 
+              
                 
-
-              </div>
-
-              <div class="form-group p-2">
-                <input 
-                type="text" 
-                name="lastname" 
-                placeholder="Lastname"
-                id="lastnameField" 
                 
-                class="form-control form-control-sm "/>
-            </div>
-          <div class="invalid-feedback invalid-feedback" style="display:none">
-            <p class="text-sm text-success lastnameSuccessOutput"></p>
             
-
-          </div>
+          
 
                     <div class="form-group p-2">
                         <input 
@@ -103,6 +85,7 @@
                     
 
                     <input type="submit" value="Register" class="btn  btn-primary submit-btn">
+                    <p class="text-sm "> Already registered? <a href="{% url 'login' %}"> Login</a></p>
 
                 </form>
 
