--- a/templates/invoice/add_invoice.html
+++ b/templates/invoice/add_invoice.html
@@ -15,7 +15,8 @@
                       <a href="{% url 'view-pdf-invoice' invoice.slug %}"><button class="btn btn-danger ">view invoice</button></a>
                       </div>
                     <div class="col">
-                      <button id="btnSubmit" class="btn btn-primary " type="submit">view pdf</button></div>
+                      
+                      <a href="{% url 'view-document-invoice' products.slug %}"><button class="btn btn-primary " type="submit">view pdf</button></a></div>
                   </div>
                   </nav>
             </div>
